--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "#%pip install --upgrade --quiet langchain langchain-community"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "id": "7ec6409b-21e5-4d0a-8a46-c4ef0b055dd3",
    "metadata": {},
    "source": [
-    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](/docs/how_to/tool_calling) guide.\n",
+    "You can select any of the given models for this how-to guide. Keep in mind that most of these models already [support native tool calling](/docs/integrations/chat/), so using the prompting strategy shown here doesn't make sense for these models, and instead you should follow the [how to use a chat model to call tools](https://python.langchain.com/docs/how_to/tool_calling/) guide.\n",
     "\n",
     "```{=mdx}\n",
     "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
@@ -89,14 +89,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "from langchain_ollama import ChatOllama\n",
+    "\n",
+    "llm = ChatOllama(\n",
+    "    model=\"llama3.2\",\n",
+    "    temperature=0,\n",
+    "    # other params...\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cba8ab4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Here are the extracted entities:\\n\\n1. TSIA\\n2. SIA\\n3. U.S. Chamber of Commerce\\n4. Global Business Alliance\\n5. SEMI\\n6. ITIC\\n7. U.S. Taiwan Business Council', additional_kwargs={}, response_metadata={'model': 'llama3.2', 'created_at': '2024-10-24T13:51:29.480156Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 2819702750, 'load_duration': 2091200667, 'prompt_eval_count': 66, 'prompt_eval_duration': 114605000, 'eval_count': 50, 'eval_duration': 605769000}, id='run-19d7fce7-e29d-4ba9-9aed-eeb6d6b454e1-0', usage_metadata={'input_tokens': 66, 'output_tokens': 50, 'total_tokens': 116})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.messages import AIMessage\n",
+    "\n",
+    "messages = [\n",
+    "    (\n",
+    "        \"system\",\n",
+    "        \"extract the entities from the following text:.\",\n",
+    "    ),\n",
+    "    (\"human\", \"TSIA, SIA, the U.S. Chamber of Commerce, the Global Business Alliance, SEMI, ITIC, and the U.S. Taiwan Business Council\"),\n",
+    "]\n",
+    "ai_msg = llm.invoke(messages)\n",
+    "ai_msg"
    ]
   },
   {
@@ -111,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -126,13 +163,17 @@
       "--\n",
       "add\n",
       "Add two numbers.\n",
-      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
+      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n",
+      "--\n",
+      "wikidata_entires\n",
+      "lookup entires on wikipendia\n",
+      "{'x': {'title': 'X', 'type': 'string'}}\n"
      ]
     }
    ],
    "source": [
     "from langchain_core.tools import tool\n",
-    "\n",
+    "from langchain_community.tools.wikidata.tool import WikidataAPIWrapper, WikidataQueryRun\n",
     "\n",
     "@tool\n",
     "def multiply(x: float, y: float) -> float:\n",
@@ -145,8 +186,14 @@
     "    \"Add two numbers.\"\n",
     "    return x + y\n",
     "\n",
+    "@tool\n",
+    "def wikidata_entires(x: str) -> str:\n",
+    "    \"\"\"lookup entires on wikipendia\"\"\"\n",
+    "    wiki_entries = WikidataQueryRun(api_wrapper=WikidataAPIWrapper())\n",
+    "    wiki_entries_result = wiki_entries(x)\n",
+    "    return wiki_entries_result\n",
     "\n",
-    "tools = [multiply, add]\n",
+    "tools = [multiply, add,wikidata_entires]\n",
     "\n",
     "# Let's inspect the tools\n",
     "for t in tools:\n",
@@ -158,23 +205,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20.0"
+       "'Result Q7863119:\\nLabel: U.S. Chamber of Commerce Building\\nDescription: headquarters building of the United States Chamber of Commerce, in Washington, D.C.\\nAliases: United States Chamber of Commerce Building, US Chamber of Commerce Building, Chamber of Commerce of the United States of America Building\\n\\nResult Q16956993:\\nLabel: U.S. Chamber of Commerce Foundation\\nDescription: nonprofit organization affiliated with the United States Chamber of Commerce\\nAliases: U.S. Chamber Foundation, National Chamber Foundation'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "multiply.invoke({\"x\": 4, \"y\": 5})"
+    "#multiply.invoke({\"x\": 4, \"y\": 5})\n",
+    "\n",
+    "wikidata_entires.invoke(\"U.S. Chamber of Commerce?\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5b4c8e29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result Q106411969:\n",
+      "Label: Taiwan Semiconductor Industry Association\n",
+      "Description: organization in Hsinchu, Taiwan\n",
+      "Aliases: TSIA\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "wikidata = WikidataQueryRun(api_wrapper=WikidataAPIWrapper())\n",
+    "\n",
+    "print(wikidata_entires.run(\"Q106411969\"))"
    ]
   },
   {
@@ -189,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -198,7 +271,8 @@
      "output_type": "stream",
      "text": [
       "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
-      "add(x: int, y: int) -> int - Add two numbers.\n"
+      "add(x: int, y: int) -> int - Add two numbers.\n",
+      "wikidata_entires(x: str) -> str - lookup entires on wikipendia\n"
      ]
     }
    ],
@@ -213,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -257,8 +331,45 @@
     }
    ],
    "source": [
-    "chain = prompt | model\n",
+    "chain = prompt | llm\n",
     "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
+    "\n",
+    "# Let's take a look at the output from the model\n",
+    "# if the model is an LLM (not a chat model), the output will be a string.\n",
+    "if isinstance(message, str):\n",
+    "    print(message)\n",
+    "else:  # Otherwise it's a chat model\n",
+    "    print(message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b65c4c7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's the response in JSON format:\n",
+      "\n",
+      "```\n",
+      "{\n",
+      "  \"name\": \"wikidata_entires\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": \"U.S. Chamber of Commerce\"\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "This indicates that the user requested information on the U.S. Chamber of Commerce, and the tool to use is `wikidata_entires`. The argument passed to this tool is the string `\"U.S. Chamber of Commerce\"`, which will be used to look up the relevant Wikipedia entry.\n"
+     ]
+    }
+   ],
+   "source": [
+    "chain = prompt | llm\n",
+    "message = chain.invoke({\"input\": \"Business Alliance Council\"})\n",
     "\n",
     "# Let's take a look at the output from the model\n",
     "# if the model is an LLM (not a chat model), the output will be a string.\n",
@@ -280,17 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'wikidata_entires', 'arguments': {'x': 'Business Alliance Council'}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,8 +409,8 @@
    "source": [
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
-    "chain = prompt | model | JsonOutputParser()\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4\"})"
+    "chain = prompt | llm | JsonOutputParser()\n",
+    "chain.invoke({\"input\": \"who is the Business Alliance Council\"})"
    ]
   },
   {
@@ -307,7 +418,7 @@
    "id": "e1f08255-f146-4f4a-be43-5c21c1d3ae83",
    "metadata": {},
    "source": [
-    ":::{.callout-important}\n",
+    ">:::{.callout-important}\n",
     "\n",
     "🎉 Amazing! 🎉 We now instructed our model on how to **request** that a tool be invoked.\n",
     "\n",
@@ -330,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +499,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,24 +520,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "53.83784653"
+       "'Result Q7863119:\\nLabel: U.S. Chamber of Commerce Building\\nDescription: headquarters building of the United States Chamber of Commerce, in Washington, D.C.\\nAliases: United States Chamber of Commerce Building, US Chamber of Commerce Building, Chamber of Commerce of the United States of America Building\\n\\nResult Q16956993:\\nLabel: U.S. Chamber of Commerce Foundation\\nDescription: nonprofit organization affiliated with the United States Chamber of Commerce\\nAliases: U.S. Chamber Foundation, National Chamber Foundation'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+    "chain = prompt | llm | JsonOutputParser() | invoke_tool\n",
+    "chain.invoke({\"input\": \"what is the U.S chamber of commerce\"})"
    ]
   },
   {
@@ -441,19 +552,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply',\n",
-       " 'arguments': {'x': 13, 'y': 4.14137281},\n",
-       " 'output': 53.83784653}"
+       "{'name': 'wikidata_entires',\n",
+       " 'arguments': {'x': 'Alan Turing'},\n",
+       " 'output': 'Result Q7251:\\nLabel: Alan Turing\\nDescription: English computer scientist (1912–1954)\\nAliases: Alan M. Turing, Alan Mathieson Turing, Turing, Alan Mathison Turing\\n\\nResult Q28846012:\\nLabel: Alan Turing\\nDescription: fictional analogon of Alan Turing (1912-1954)\\nAliases: Alan Mathison Turing'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,9 +573,9 @@
     "from langchain_core.runnables import RunnablePassthrough\n",
     "\n",
     "chain = (\n",
-    "    prompt | model | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
+    "    prompt | llm | JsonOutputParser() | RunnablePassthrough.assign(output=invoke_tool)\n",
     ")\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+    "chain.invoke({\"input\": \"Who is Alen Turing\"})"
    ]
   },
   {
@@ -483,11 +594,17 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68344675",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
