--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install --upgrade --quiet langchain langchain-community"
    ]
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
@@ -89,10 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mends\\AppData\\Local\\Temp\\ipykernel_10120\\1427064109.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  model = Ollama(model=\"phi3\")\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.llms import Ollama\n",
     "\n",
@@ -213,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -247,11 +264,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 1132\n",
+      "  }\n",
       "}\n"
      ]
     }
@@ -280,17 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 13, 'y': 4}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +405,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
@@ -419,7 +436,7 @@
        "53.83784653"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +470,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +500,19 @@
     "1. Provide few shot examples.\n",
     "2. Add error handling (e.g., catch the exception and feed it back to the LLM to ask it to correct its previous output)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "990a6e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
