--- a/lab-tools-prompting.ipynb
+++ b/lab-tools-prompting.ipynb
@@ -42,12 +42,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8c556c5e-b785-428b-8e7d-efd34a2a1adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install --upgrade --quiet langchain langchain-community langchain_ollama pinecone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "44b18db9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet langchain langchain-community"
+    "import os\n",
+    "from pathlib import Path\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
+    "# Load path from the environment variable\n",
+    "env_ih1 = os.getenv(\"ENV_IH1\")\n",
+    "\n",
+    "dotenv_path = Path(env_ih1)\n",
+    "load_dotenv(dotenv_path=dotenv_path)\n",
+    "\n",
+    "OPENAI_API_KEY  = os.getenv('OPENAI_API_KEY')\n",
+    "PINECONE_API_KEY= os.getenv('PINECONE_KEY')"
    ]
   },
   {
@@ -60,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "5efb4170-b95b-4d29-8f57-09509f3ba6df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import getpass\n",
-    "import os\n",
-    "# os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "# os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass()"
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_ENDPOINT\"]=\"https://api.smith.langchain.com\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"]=\"lab-tools-prompting\"\n",
+    "LANGSMITH_API_KEY = os.getenv(\"LANGSMITH_API_KEY\")"
    ]
   },
   {
@@ -84,19 +113,42 @@
     "<ChatModelTabs openaiParams={`model=\"gpt-4\"`} />\n",
     "```\n",
     "\n",
-    "To illustrate the idea, we'll use `phi3` via Ollama, which does **NOT** have native support for tool calling. If you'd like to use `Ollama` as well follow [these instructions](/docs/integrations/chat/ollama/)."
+    "To illustrate the idea, we'll use `phi3` via Ollama, which does **NOT** have native support for tool calling. If you'd like to use `Ollama` as well follow [these instructions](/docs/integrations/chat/ollama/).\n",
+    "\n",
+    "Bear in mind, this model is around 2gb and will be downloaded in your system. To run it, if you don't have a GPU it will run inference on CPU and might be slow. Feel free to skip and use `gpt-4o-mini` from OpenAI instead."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "424be968-2806-4d1a-a6aa-5499ae20fac5",
+   "execution_count": 22,
+   "id": "5b14026b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.llms import Ollama\n",
+    "from langchain_ollama import OllamaLLM\n",
     "\n",
-    "model = Ollama(model=\"phi3\")"
+    "model = OllamaLLM(model=\"phi3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a38fb7b6",
+   "metadata": {},
+   "source": [
+    "Should you not have ae access to `Ollama`, you can also use `gpt-4o-mini` from OpenAI. If you'd like to use `gpt-4o-mini`, uncomment the below and make sure to have the `langchain_openai` package installed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "90655f01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "#OPENAI_API_KEY  = os.getenv('OPENAI_API_KEY')\n",
+    "#model = ChatOpenAI(model= \"gpt-4o-mini\")"
    ]
   },
   {
@@ -111,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "4548e6fa-0f9b-4d7a-8fa5-66cec0350e5f",
    "metadata": {},
    "outputs": [
@@ -126,7 +178,11 @@
       "--\n",
       "add\n",
       "Add two numbers.\n",
-      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n"
+      "{'x': {'title': 'X', 'type': 'integer'}, 'y': {'title': 'Y', 'type': 'integer'}}\n",
+      "--\n",
+      "square\n",
+      "Square a number.\n",
+      "{'x': {'title': 'X', 'type': 'integer'}}\n"
      ]
     }
    ],
@@ -146,7 +202,12 @@
     "    return x + y\n",
     "\n",
     "\n",
-    "tools = [multiply, add]\n",
+    "@tool\n",
+    "def square(x: int) -> int:\n",
+    "    \"Square a number.\"\n",
+    "    return x**2\n",
+    "\n",
+    "tools = [multiply, add, square]\n",
     "\n",
     "# Let's inspect the tools\n",
     "for t in tools:\n",
@@ -158,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "be77e780",
    "metadata": {},
    "outputs": [
@@ -168,7 +229,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "2063b564-25ca-4729-a45f-ba4633175b04",
    "metadata": {},
    "outputs": [
@@ -198,7 +259,8 @@
      "output_type": "stream",
      "text": [
       "multiply(x: float, y: float) -> float - Multiply two numbers together.\n",
-      "add(x: int, y: int) -> int - Add two numbers.\n"
+      "add(x: int, y: int) -> int - Add two numbers.\n",
+      "square(x: int) -> int - Square a number.\n"
      ]
     }
    ],
@@ -213,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "f02f1dce-76e7-4ca9-9bac-5af496131fe1",
    "metadata": {},
    "outputs": [],
@@ -238,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "f8623e03-60eb-4439-b57b-ecbcebc61b58",
    "metadata": {},
    "outputs": [
@@ -246,19 +308,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "```json\n",
       "{\n",
-      "    \"name\": \"add\",\n",
-      "    \"arguments\": {\n",
-      "        \"x\": 3,\n",
-      "        \"y\": 1132\n",
-      "    }\n",
-      "}\n"
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 121\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "To solve the task at hand using a sequence of tools:\n",
+      "\n",
+      "1. First calculate the square root operation with `square(x=11)`. This returns `{ 'result': 121 }` which is used as an argument for next step, but it's not needed to be returned in JSON since we are just interested in passing these values through the functions chain rather than capturing interim results.\n",
+      "   \n",
+      "   ```json\n",
+      "   { \"name\": \"square\", \"arguments\": {\"x\": 11} }\n",
+      "   ```\n",
+      "   \n",
+      "2. Then add `3` and the squared result with `add(x=3, y=<result from previous step>)`. As we are only using JSON for passing parameters: `{ 'result': 124 }` which is not needed to be returned in final output as well since it's an intermediate calculation.\n",
+      "   \n",
+      "   ```json end response```\n",
+      "   { \"name\": \"add\", \"arguments\": {\"x\": 3, \"y\": <calculated_value> }\n"
      ]
     }
    ],
    "source": [
     "chain = prompt | model\n",
-    "message = chain.invoke({\"input\": \"what's 3 plus 1132\"})\n",
+    "message = chain.invoke({\"input\": \"what's 3 plus 11 squared?\"})\n",
+    "\n",
+    "# Let's take a look at the output from the model\n",
+    "# if the model is an LLM (not a chat model), the output will be a string.\n",
+    "if isinstance(message, str):\n",
+    "    print(message)\n",
+    "else:  # Otherwise it's a chat model\n",
+    "    print(message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b2311fb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```json\n",
+      "{\n",
+      "  \"name\": \"add\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 3,\n",
+      "    \"y\": 3\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "Next step is to use the `square` tool with arguments:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"name\": \"square\",\n",
+      "  \"arguments\": {\n",
+      "    \"x\": 6\n",
+      "  }\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "chain = prompt | model\n",
+    "message = chain.invoke({\"input\": \"what's 3 plus 3? Square the result\"})\n",
     "\n",
     "# Let's take a look at the output from the model\n",
     "# if the model is an LLM (not a chat model), the output will be a string.\n",
@@ -280,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "f129f5bd-127c-4c95-8f34-8f437da7ca8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'multiply', 'arguments': {'x': 13.0, 'y': 4.0}}"
+       "{'name': 'multiply', 'arguments': {'x': 52, 'y': 13}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +421,7 @@
     "from langchain_core.output_parsers import JsonOutputParser\n",
     "\n",
     "chain = prompt | model | JsonOutputParser()\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4\"})"
+    "chain.invoke({\"input\": \"what's thirteen times 4 squared?\"})"
    ]
   },
   {
@@ -330,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "faee95e0-4095-4310-991f-9e9465c6738e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "d0ea3b2a-8fb2-4016-83c8-a5d3e78fedbc",
    "metadata": {},
    "outputs": [
@@ -388,7 +510,7 @@
        "15.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,24 +531,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "0555b384-fde6-4404-86e0-7ea199003d58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "53.83784653"
+       "12.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chain = prompt | model | JsonOutputParser() | invoke_tool\n",
-    "chain.invoke({\"input\": \"what's thirteen times 4.14137281\"})"
+    "chain.invoke({\"input\": \"what's three times 4 ?\"})"
    ]
   },
   {
@@ -441,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "45404406-859d-4caa-8b9d-5838162c80a0",
    "metadata": {},
    "outputs": [
@@ -453,7 +575,7 @@
        " 'output': 53.83784653}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +609,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
